asm_tests/other_testfiles/invalid_files/error52.s
.name "MORO"
.comment "MORJESTA!"

ldi r2, r3, .name "hihii" r2
